0.23

0.22 21 Mar 2016
 - New: Paws::Credential::AssumeRoleWithSAML for using Paws through STS AssumeRoleWithSAML
        examples/sts-saml has an example of how to retrieve credentials through an ADFS
 - New: perls 5.10 and 5.12 are working after changing package syntax. They've been setup for
        travis testing. This should not be thought of as long term commitment to supporting such
        old perl versions, but at least it can be viewed as we'll know exactly when we stop
        supporting them (and that will be announced in the changelog). Thanks to ilmari for
        a 5.10 support PR)
 - New: Paws::Net::Caller, LWPCaller  and FurlCaller now implement retry logic in case APIs
        return a retriable HTTP error
 - New: DynamoDB now benefits from crc-32 errors, and being able to retry the call
 - Work to get RestJson services. Some can now be called correctly (ES is working, for example
   others need tests)
 - Better documentation: show the valid values for an attribute when it's an enum
 - Fix bug where a call to DescribeAutoScalingGroups would die if the API was not returning the LaunchConfigurationName attribute for the Instance shape (reported by msoriano)
 - Fix bug where a StrToObj map of complex objects would not instance the object correctly
 - Fix SimpleDB (SDB) API definitions. AWS provided ones were not working
 - New Service: ECR (EC2 Container Registry)
 - New Service: CloudWatch Events
 - New Service: ACM (AWS Certificate Manager)
 - New service: GameLift
 - New service: DMS (Database Migration Service)
 - New service: Marketplace Metering
 - EC2 API update: support for NatGateways, VpcClassicLinkDnsSupport, and ScheduledInstances
 - RDS API update: support for enhanced monitoring, and more new features
 - CloudFront API update: support for compressing and SSL to origin
 - CloudFront API update: support for ACM certificates
 - CloudTrail API update: support for multiregion trails
 - Config API update
 - EMR API update: support for VPC EMR